syntax = "proto3";

package sfc_invite;

import "Models/Common/pagination.proto";
import "Models/Common/sorting.proto";
import "Messages/Invite/Team/Player/Find/Filters/get_team_player_invites_filter.proto";

option csharp_namespace = "SFC.Invite.Contracts.Messages.Invite.Team.Player.Find";

message GetTeamPlayerInvitesRequest
{
    Pagination pagination = 1;
    repeated Sorting sorting = 2;
    GetTeamPlayerInvitesFilter filter = 3;
}