syntax = "proto3";

package sfc_invite;

import "Models/Invite/Team/Player/team_player_invite.proto";

option csharp_namespace = "SFC.Invite.Contracts.Messages.Invite.Team.Player.Find";

message GetTeamPlayerInvitesResponse
{
    repeated TeamPlayerInvite items = 1;
}